fix: try to fix backdrop not spanning full width on iphone 11

--- a/css/styles.css
+++ b/css/styles.css
@@ -929,4 +929,20 @@ main {
 }
 .watch-now-button:hover {
   scale: 1.05;
+}
+
+@media (max-width: 575.98px) {
+  .watch-online__swiper {
+    min-height: 35vh;
+    width: 100%;
+  }
+  .watch-online__swiper .watch-online__swiper-slide {
+    width: 100%;
+    height: 100%;
+  }
+  .watch-online__swiper .watch-online__swiper-slide .watch-online__swiper-slide-backdrop {
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
 }/*# sourceMappingURL=styles.css.map */
