--- a/scss/components/_home.scss
+++ b/scss/components/_home.scss
@@ -293,3 +293,21 @@ $spacer: 1rem;
         
     }
 }
+
+
+@include media-breakpoint-only(xs) {
+    .watch-online__swiper {
+        min-height: 35vh;
+        width: 100%;
+
+        .watch-online__swiper-slide {
+            width: 100%;
+            height: 100%;
+
+            .watch-online__swiper-slide-backdrop {
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+    }
+}
